--- a/ShipRent/src/main/webapp/resources/inicial_cliente.html
+++ b/ShipRent/src/main/webapp/resources/inicial_cliente.html
@@ -9,17 +9,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
 <script src="./resources/js/bootstrap.min.js"></script> 
 </head>
-	<body>
-	
-		<div id="divTeste" class="container">
-			<h2>Suas saídas</h2>
-				<h4>Não implementado ainda</h4><br />
-			<h2>Criar uma saida(particular ou pública)</h2>
-				<h4>Não implementado ainda</h4>	<br /><br />
+<body>
+	<div id="divTeste" class="container">
+			<h2>Suas saÃ­das</h2>
+				<h4>NÃ£o implementado ainda</h4><br />
+			<h2>Criar uma saida(particular ou pÃºblica)</h2>
+				<h4>NÃ£o implementado ainda</h4>	<br /><br />
 			<h2>Lista de saidas proximas:</h2>
-				<h4>Não implementado ainda</h4><br />
+				<h4>NÃ£o implementado ainda</h4><br />
 			<h2>Lista de com vagas em aberto:</h2>
-				<h4>Não implementado ainda</h4><br />
+				<h4>NÃ£o implementado ainda</h4><br />
 				
 			<a href="/clientes">Cadastro de Clientes</a><br />
 			
@@ -27,5 +26,5 @@
 			<a href="/">Sair</a>
 		
 		</div>
-	</body>
+</body>
 </html>
