--- a/ShipRent/src/main/webapp/resources/inicial_cliente.html
+++ b/ShipRent/src/main/webapp/resources/inicial_cliente.html
@@ -10,7 +10,7 @@
 <script src="./resources/js/bootstrap.min.js"></script> 
 </head>
 <body>
-	<div id="divTeste" class="container">
+	<div id="divTeste" class="container" style="width: 100%">
 			<h2>Suas saídas</h2>
 				<h4>Não implementado ainda</h4><br />
 			<h2>Criar uma saida(particular ou pública)</h2>
