--- a/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
+++ b/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
@@ -17,7 +17,7 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-	<div id="divBarqueiro">
+	<div class="container-fluid" id="divBarqueiro">
 		<button id="cadastroBarco">Cadastro de Barcos</button><br />
 		
 		<a href="/inicial_barqueiros/listaembarcacoes">Lista de Embarcações</a>	
