--- a/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
+++ b/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
@@ -9,34 +9,42 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
 <script src="./resources/js/bootstrap.min.js"></script> 
 <script type="text/javascript" >
-$(document).ready(function() {
-    $("#cadastroBarco").click(function(event){
-       $('#divBarqueiro').load('/resources/barco.html');
-    });
- });
+	$(document).ready(function() {
+	    $("#cadastroBarco").click(function(event){
+	       $('#divBarqueiro').load('/resources/barco.html');
+	    });
+	 });
+	 
+	$(document).ready(function() {
+	    $("#listaEmbarcacoes").click(function(event){
+	       $('#divBarqueiro').load('/resources/jsp/listaembarcacoes.jsp');
+	    });
+	 });
+	 
+	$(document).ready(function() {
+	    $("#novaSaida").click(function(event){
+	       $('#divBarqueiro').load('/resources/jsp/novasaidabarcos.jsp');
+	    });
+	 });
+	 
+	$(document).ready(function() {
+	    $("#cadastraBarqueiros").click(function(event){
+	       $('#divBarqueiro').load('/resources/jsp/barqueiros.jsp');
+	    });
+	 });
 </script>
 </head>
 <body>
 	<div class="container-fluid" id="divBarqueiro">
 		<button id="cadastroBarco">Cadastro de Barcos</button><br />
 		
-		<a href="/inicial_barqueiros/listaembarcacoes">Lista de Embarcações</a>	
-		<h2>Lista de saidas proximas:</h2>
+		<form id=lista action="/inicial_barqueiros/listaembarcacoes">
+			<button id="listaEmbarcacoes">Lista de Embarcações</button><br />
+		</form>
 		
-			<h4>Não implementado ainda</h4><br /><br />
-		<h2>Lista de com vagas em aberto:</h2>
-			<h4>Não implementado ainda</h4><br />
-		<h2>Lista de sem vagas:</h2>
-			<h4>Não implementado ainda</h4><br /><br />
-		<h2>Historico de saidas.</h2>		
-			<h4>Não implementado ainda</h4><br />
+		<button id="novaSaida">Nova Saída</button><br />
 		
-		<a href="/barqueiros">Cadastro de Barqueiros</a>
-		<br>
-		
-		<a href = "/">
-			<button type="submit"> Sair</button>
-		</a>
+		<button id="cadastraBarqueiros">Cadastro de Barqueiros</button><br />
 	</div>
 </body>
 </html>
