css para tabelas

--- a/ShipRent/src/main/webapp/resources/about.html
+++ b/ShipRent/src/main/webapp/resources/about.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
-<title>Insert title here</title>
+<title>Sobre</title>
 <link href="./resources/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="./resources/css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
 <script type="text/javascript" src="./resources/js/jquery-3.3.1.js"></script>
