--- a/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
+++ b/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
-<title>Insert title here</title>
+<title>Barqueiros</title>
 <link href="./resources/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="./resources/css/bootstrap-theme.min.css" rel="stylesheet" media="screen">
 <script type="text/javascript" src="./resources/js/jquery-3.3.1.js"></script>
@@ -36,15 +36,15 @@
 </head>
 <body>
 	<div class="container-fluid" id="divBarqueiro">
-		<button id="cadastroBarco">Cadastro de Barcos</button><br />
+		<button type="button"  id="cadastroBarco">Cadastro de Barcos</button><br />
 		
 		<form id=lista action="/inicial_barqueiros/listaembarcacoes">
-			<button id="listaEmbarcacoes">Lista de Embarcações</button><br />
+			<button type="button"  id="listaEmbarcacoes">Lista de Embarcações</button><br />
 		</form>
 		
-		<button id="novaSaida">Nova Saída</button><br />
+		<button type="button"  id="novaSaida">Nova Saída</button><br />
 		
-		<button id="cadastraBarqueiros">Cadastro de Barqueiros</button><br />
+		<button type="button"  id="cadastraBarqueiros">Cadastro de Barqueiros</button><br />
 	</div>
 </body>
 </html>
