--- a/ShipRent/src/main/webapp/resources/inicial_cliente.html
+++ b/ShipRent/src/main/webapp/resources/inicial_cliente.html
@@ -27,7 +27,7 @@
 		
 		<form id="minhassaidas" action="/inicial_clientes/minhassaidas" method="post">
 			CPF: <input name="cpf" id="cpf" type="text" required>
-			<button id="minhasSaidas">Minhas Saidas</button><br />
+			<button class="btn" id="minhasSaidas">Minhas Saidas</button><br />
 		</form>
 		<button id="clientes">Cadastro de Clientes</button><br />
 	</div>
