css, validacao de vagas e erro

--- a/ShipRent/src/main/webapp/resources/barco.html
+++ b/ShipRent/src/main/webapp/resources/barco.html
@@ -13,9 +13,9 @@
 <body>
 	<div id="divBarco">
 		<form id="barcos" action="/barcos/save" method="POST">
-			<label>tipo:<input name="tipo" type="text" required></label><br />
-			<label>capacidade:<input name="capacidade" type="number" required></label><br />
-			<label>nome:<input name="nome" type="text" required></label><br /> 
+			<label>Tipo<br><input name="tipo" type="text" required></label><br />
+			<label>Capacidade<br><input name="capacidade" type="number" required></label><br />
+			<label>Nome<br><input name="nome" type="text" required></label><br /> 
 			<input type="submit" name="action" value="Enviar" />
 		</form>
 	</div>
