--- a/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
+++ b/ShipRent/src/main/webapp/resources/inicial_barqueiro.html
@@ -36,15 +36,15 @@
 </head>
 <body>
 	<div class="container-fluid" id="divBarqueiro">
-		<button type="button"  id="cadastroBarco">Cadastro de Barcos</button><br />
-		
+		<button class="btn" type="button"  id="cadastroBarco">Cadastro de Barcos</button><br />
+		<br>
 		<form id=lista action="/inicial_barqueiros/listaembarcacoes">
-			<button type="button"  id="listaEmbarcacoes">Lista de Embarcações</button><br />
+			<button class="btn" type="button"  id="listaEmbarcacoes">Lista de Embarcações</button><br />
 		</form>
-		
-		<button type="button"  id="novaSaida">Nova Saída</button><br />
-		
-		<button type="button"  id="cadastraBarqueiros">Cadastro de Barqueiros</button><br />
+		<br>
+		<button class="btn" type="button"  id="novaSaida">Nova Saída</button><br />
+		<br>
+		<button class="btn" type="button"  id="cadastraBarqueiros">Cadastro de Barqueiros</button><br />
 	</div>
 </body>
 </html>
