--- a/ShipRent/src/main/webapp/resources/inicial_cliente.html
+++ b/ShipRent/src/main/webapp/resources/inicial_cliente.html
@@ -28,8 +28,9 @@
 		<form id="minhassaidas" action="/inicial_clientes/minhassaidas" method="post">
 			CPF: <input name="cpf" id="cpf" type="text" required>
 			<button class="btn" id="minhasSaidas">Minhas Saidas</button><br />
+			<br>
 		</form>
-		<button id="clientes">Cadastro de Clientes</button><br />
+		<button class="btn" id="clientes">Cadastro de Clientes</button><br />
 	</div>
 </body>
 </html>
